--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,7 @@
   display: flex;
 }
 .menu-toggle-button {
-  margin-left: 16px;
-  margin-bottom: 30px;
+  margin: 4px 0 30px 16px;
 }
 .menu-toggle-button .mat-icon {
   cursor: pointer
