--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,30 @@
 <mat-sidenav-container fullscreen>
   <mat-sidenav #sidenav id="sidenav" mode="side" [opened]="authService.isAuthorized">
-    <div class="sidenav-inner" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
+    <div class="sidenav-inner">
       <div class="menu-toggle-button">
         <mat-icon (click)="toggleSidenav()">menu</mat-icon>
       </div>
       <mat-nav-list>
         <a mat-list-item *ngFor="let page of pages" routerLink="{{page?.link}}"
-          routerLinkActive="mat-mdc-list-item-active" [routerLinkActiveOptions]="{exact:true}">
+          routerLinkActive="mat-mdc-list-item-active" [routerLinkActiveOptions]="{exact:true}"
+          [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
           <mat-icon>{{page?.icon}}</mat-icon>
-          <span [@animateText]="isTextVisible ? 'show' : 'hide'">{{ page?.name }}</span>
+          <span>{{ page?.name }}</span>
         </a>
       </mat-nav-list>
       <mat-action-list>
-        <mat-list-item (click)="authService.logout()">
+        <mat-list-item (click)="authService.logout()" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
           <mat-icon>logout</mat-icon>
-          <span [@animateText]="isTextVisible ? 'show' : 'hide'">Выйти</span>
+          <span>Выйти</span>
         </mat-list-item>
       </mat-action-list>
     </div>
   </mat-sidenav>
-  <mat-sidenav-content class="content"
-    [@onMainContentChange]="!authService.isAuthorized ? 'full' : isMenuOpened ? 'open': 'close'">
-    <router-outlet></router-outlet>
+  <mat-sidenav-content [@onMainContentChange]="!authService.isAuthorized ? 'full' : isMenuOpened ? 'open': 'close'">
+    <div class="root-container">
+      <div class="responsive-container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
