--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@ $project-theme: mat.define-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
+
 :root,
 ::before,
 ::after {
@@ -63,6 +64,52 @@ body {
 .material-symbols-rounded {
   font-variation-settings: "FILL" var(--symbol-fill, 0), "wght" 400, "GRAD" 0,
     "opsz" 48;
+}
+
+:root {
+  --body-margins: 16px;
+  --body-grow: 0;
+  --body-columns: 4;
+  --body-gutters: 8px;
+  --info-gap: 16px;
+  --border-radius: 16px;
+}
+router-outlet {
+  display: none;
+}
+.root-container {
+  height: 100%;
+  display: flex;
+  container-type: inline-size;
+  overflow: auto;
+}
+.responsive-container {
+  height: 100%;
+  flex: var(--body-grow) 1 840px;
+  margin-inline: var(--body-margins);
+  display: grid;
+  grid-template-columns: repeat(var(--body-columns), 1fr);
+  grid-column-gap: var(--body-gutters);
+  transition: margin .3s ease-out;
+
+  @container (min-width: 632px) {
+    --body-margins: 32px;
+    --body-columns: 12;
+    --body-gutters: 12px;
+  }
+
+  @container (min-width: 904px) {
+    --body-margins: auto;
+  }
+
+  @container (min-width: 1240px) {
+    --body-margins: 200px;
+    --body-grow: 1;
+    --body-gutters: 32px;
+  }
+}
+.container.full-width {
+  grid-column: span var(--body-columns);
 }
 
 @import "scss/mat-sidenav";
