--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,30 @@
-<mat-sidenav-container fullscreen>
+<mat-sidenav-container *ngIf="!(responsiveService.isMobile | async)" fullscreen>
   <mat-sidenav #sidenav id="sidenav" mode="side" [opened]="authService.isAuthorized">
     <div class="sidenav-inner">
       <div class="menu-toggle-button">
         <mat-icon (click)="toggleSidenav()">menu</mat-icon>
       </div>
-      <mat-nav-list>
-        <a mat-list-item *ngFor="let page of pages" routerLink="{{page?.link}}"
-          routerLinkActive="mat-mdc-list-item-active" [routerLinkActiveOptions]="{exact:true}"
-          [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
-          <mat-icon>{{page?.icon}}</mat-icon>
-          <span>{{ page?.name }}</span>
+      <mat-nav-list class="nav-drawer">
+        <a mat-list-item routerLink="" routerLinkActive="mat-mdc-list-item-active"
+          [routerLinkActiveOptions]="{exact:true}" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
+          <mat-icon>home</mat-icon>
+          <span>Главная</span>
+        </a>
+        <a mat-list-item routerLink="page-2" routerLinkActive="mat-mdc-list-item-active"
+          [routerLinkActiveOptions]="{exact:true}" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
+          <mat-icon>favorite</mat-icon>
+          <span>Избранное</span>
+        </a>
+        <a mat-list-item routerLink="books" routerLinkActive="mat-mdc-list-item-active"
+          [routerLinkActiveOptions]="{exact:true}" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
+          <mat-icon>book</mat-icon>
+          <span>Книги</span>
         </a>
       </mat-nav-list>
       <mat-action-list>
+        <div class="user-icon">
+          <span>{{authService.userName}}</span>
+        </div>
         <mat-list-item (click)="authService.logout()" [@onSideNavChange]="isMenuOpened ? 'open' : 'close'">
           <mat-icon>logout</mat-icon>
           <span>Выйти</span>
@@ -26,5 +38,47 @@
         <router-outlet></router-outlet>
       </div>
     </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+<mat-sidenav-container *ngIf="responsiveService.isMobile | async" fullscreen>
+  <mat-sidenav-content class="mobile">
+    <mat-toolbar *ngIf="authService.isAuthorized">
+      <div class="user-icon">
+        <span>{{authService.userName}}</span>
+      </div>
+      <button mat-icon-button (click)="authService.logout()" class="logout">
+        <mat-icon>logout</mat-icon>
+      </button>
+    </mat-toolbar>
+    <div *ngIf="!authService.isAuthorized" style="height: 70px;"></div>
+    <div class="root-container">
+      <div class="responsive-container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+    <div *ngIf="authService.isAuthorized" class="nav-bar">
+      <a class="link" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <div matRipple class="icon">
+          <mat-icon>home</mat-icon>
+        </div>
+        <span class="label mat-label-medium">Главная</span>
+      </a>
+      <a class="link" routerLink="page-2" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <div matRipple class="icon">
+          <mat-icon>favorite</mat-icon>
+        </div>
+        <span class="label mat-label-medium">Избранное</span>
+      </a>
+      <a class="link" routerLink="books" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <div matRipple class="icon">
+          <mat-icon>book</mat-icon>
+        </div>
+        <span class="label mat-label-medium">Книги</span>
+      </a>
+    </div>
+    <div *ngIf="!authService.isAuthorized" style="height: 70px;"></div>
   </mat-sidenav-content>
 </mat-sidenav-container>
