--- a/src/scss/_mat-sidenav.scss
+++ b/src/scss/_mat-sidenav.scss
@@ -13,12 +13,14 @@
   background-color: colors.surface();
   color: colors.on-surface-variant();
 }
-.mat-nav-list {
+
+.nav-drawer.mat-nav-list {
   height: 100%;
   display: flex;
   flex-direction: column;
 }
-.mat-mdc-list-item {
+
+.nav-drawer .mat-mdc-list-item {
   height: 56px !important;
   padding-inline: 16px !important;
   border-radius: 28px;
@@ -46,9 +48,7 @@
     background-color: currentColor;
   }
 
-  &.mat-mdc-list-item-interactive:not(:focus):not(
-      .mdc-list-item--disabled
-    ):hover::before {
+  &.mat-mdc-list-item-interactive:not(:focus):not(.mdc-list-item--disabled):hover::before {
     opacity: 0.08;
   }
 }
@@ -64,4 +64,51 @@
   flex-direction: column;
   flex-grow: 1;
   justify-content: flex-end;
+
+  .mat-mdc-list-item-unscoped-content {
+    @include typography.label-large;
+    display: flex;
+    gap: 12px;
+    flex-direction: row;
+    align-items: center;
+    color: inherit;
+
+    .mat-icon {
+      flex: 0 0 24px;
+    }
+  }
+
+  &.mat-mdc-list-item-active {
+    background-color: colors.secondary-container();
+    color: colors.on-secondary-container();
+    --symbol-fill: 1;
+  }
+
+  &.mat-mdc-list-item-interactive::before {
+    background-color: currentColor;
+  }
+
+  &.mat-mdc-list-item-interactive:not(:focus):not(.mdc-list-item--disabled):hover::before {
+    opacity: 0.08;
+  }
+
+  .user-icon {
+    margin: 20px 0;
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    background: colors.tertiary-container();
+    color: colors.on-tertiary-container();
+    display: grid;
+    place-items: center;
+
+    span {
+      display: block;
+      width: 1.3ch;
+      overflow: hidden;
+      text-transform: uppercase;
+
+      @include typography.headline-small();
+    }
+  }
 }
